--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -28,16 +28,16 @@
         </div>
 
         <div class="form-group">
-          <label for="location-text">Location:</label>
+          <label for="location-text">Address:</label>
           <input
             id="location-text geocoder"
             class="form-control geocoder"
             type="text"
             name="location"
-            placeholder="location"
+            placeholder="1234 Main St"
           />
         </div>
-
+        <div class="form-row">
         <div class="form-group input-file-container">
           <label for="my-file" class="input-file-trigger" tabindex="0"
             >Select a images...</label
