--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -6,16 +6,18 @@
 <br />
 
 <div id="map">map</div>
-<div id="map-1">map-1</div>
 <br />
 
 
 <br />
-<div class="ui grid" id="posts">
-
-  <% include posts %>
-
+<div class="ui container">
+ <div class="ui grid" id="posts">
+  
+    <% include posts %>
+  
+ </div>
 </div>
+
 
 <br>
 <br>
@@ -25,29 +27,11 @@
 <br />
 <a href="/blog/new">Create new post </a>
 
-<button class="btn btn-lg btn-primary btn-block" id="loadMore" type="submit"> Load more...</button>
+<button class="btn btn-lg btn-primary btn-block" id="loadMore" type="submit" > Load more...</button>
 
 <script>
   var post = <%- JSON.stringify(Post) %>;
-console.log(post);
-for(let i = 0; i < post.length; i++){
-  console.log(post[i].coordinates);
-}
- 
- 
- 
-
-
-
- 
-  
-
-
-// const placesFilter = post.filter((places,i) => {
-//     console.log(places[i].coordinates);  });
-
-
-//   console.log(placesFilter);
+  const placesFilter = post.filter((place) => place.coordinates.length > 0);
   mapboxgl.accessToken =
     "pk.eyJ1IjoiZmlnYXQiLCJhIjoiY2pvaXY3NTN6MGRpNzN3cXNoaXNpNjEyMSJ9.jiyYnNApApmlEs-jamTIHQ";
    
@@ -56,29 +40,20 @@ for(let i = 0; i < post.length; i++){
   var map = new mapboxgl.Map({
     container: "map",
     style: "mapbox://styles/mapbox/streets-v9",
-    center:  post[i].coordinates,
-    zoom: 11,
+    center:  placesFilter[0].coordinates,
+    zoom: 6,
     zooming: true
   });
 
-  const features =  map.queryRenderedFeatures(
-    post[0][0].coordinates
-  );
-  console.log(features);
-
-// add markers to map
-
-  var el = document.createElement("div");
-  el.className = "marker";
-  // make a marker for each feature and add to the map
-  new mapboxgl.Marker(el)
-    .setLngLatLngLat(post[i].coordinates)
-    .setPopup(
-      new mapboxgl.Popup({ offset: 25 }) // add popups
-        .setHTML(` <h3>  ${post[i].title} </h3> <p>  ${post[i].coordinates}  </p>`)
-    )
-    // <div class='image-map'> <img src="${post[0].images[0]}"></div>
-    .addTo(map);
+for(let i = 0; i < placesFilter.length; i++){
+ 	    var el = document.createElement("div");
+     el.className = "marker";
+     var popup = new mapboxgl.Popup({ offset: 25 }).setHTML(` <h3>  ${placesFilter[i].title} </h3> <p>  ${placesFilter[i].location}  </p>`);
+// make a marker for each feature and add to the map
+new mapboxgl.Marker(el)
+.setLngLat(placesFilter[i].coordinates)
+.setPopup(popup)
+.addTo(map);}
 </script>
 </body>
 
