--- a/views/blog/posts.ejs
+++ b/views/blog/posts.ejs
@@ -2,28 +2,17 @@
 <div class="ui link cards ">
   <div class="card four wide column">
     <div class="image ui segment">
-      <div class="item">
-        <img src="<%= post.images[0] %>">
-      </div>
+      <div class="item"><img src="<%= post.images[0] %>" /></div>
     </div>
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-      </div>
-    </div>
+    <div class="blurring dimmable image"><div class="ui dimmer"></div></div>
     <div class="content">
-      <a href="/blog/<%= post._id %>" class="header">
-        <%= post.title%>
-      </a>
+      <a href="/blog/<%= post._id %>" class="header"> <%= post.title%> </a>
     </div>
     <div class="extra content">
       <span class="right floated">
-        Created
-        <%= moment(post.date).fromNow() %>
+        Created <%= moment(post.date).fromNow() %>
       </span>
-      <span>
-        <i class="eye icon"></i>
-        <%= post.views%>
-      </span>
+      <span> <i class="eye icon"></i> <%= post.views%> </span>
     </div>
   </div>
 </div>
