--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -7,7 +7,10 @@
 
 <div id="map">map</div>
 <br />
-
+<form action="/blog" method="GET">
+  <input type="text" name="title">
+  <button>search</button>
+</form>
 
 <br />
 <div class="ui container">
