--- a/views/layouts/landingPage.ejs
+++ b/views/layouts/landingPage.ejs
@@ -53,7 +53,7 @@
 
           <% } else { %>
           <li class="nav-item">
-            <a class="nav-link" href="#">User: <%= currentUser.username %></a>
+            <a class="nav-link" href="/user">User: <%= currentUser.username %></a>
           </li>
 
           <li class="nav-item">
