--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,7 +65,7 @@
           </li>
           <% } else { %>
           <li class="nav-item">
-            <a class="nav-link" href="#">User: <%= currentUser.username %></a>
+            <a class="nav-link" href="/user">User: <%= currentUser.username %></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Log out</a>
